// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin astInjectAtRoot.es5.js: astInjectAtRoot.es5.js 1`] = `
"
function f2() {
  AddCustomCode();
  AddCustomCode();
}
f2();
f2();

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

someFancyCodeHere();

function f2() {
  AddCustomCode();
  AddCustomCode();
}

f2();
f2();
"
`;

exports[`plugin astInjectAtRoot.esNext.js: astInjectAtRoot.esNext.js 1`] = `
"
function f2() {
  AddCustomCode();
  AddCustomCode();
}
f2();
f2();

      ↓ ↓ ↓ ↓ ↓ ↓

function f2() {
  AddCustomCode();
  AddCustomCode();
}

f2();
f2();
"
`;
